# kovcheg

./: .dockerignore  .env.example  .gitignore  DEPLOY_VPS.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml  run.sh
app/: admin.py  auth.py  battlepass.py  bot.py  config.py  db.py  game.py  games_checkers.py  main.py  models.py  notify.py  players.py  schemas.py  seed.py
app/api/: _helpers.py  admin.py  arcade.py  battlepass.py  chat.py  content.py  game.py  home.py  market.py  profile.py  quiz.py  shop.py  tasks.py  wheel.py
app/assistant/: __init__.py  api.py  client.py  embedder.py  prompts.py  search.py  service.py  store.py
nginx/: nginx.conf
scripts/: index_knowledge.py
static/: admin.js  api.js  app.js  arcade.js  assistant.js  battlepass.js  home.js  index.html  koverna.js  profile.js  settings.js  style.css
static/pages/: ._arcade.js  admin.js  arcade.js  assistant.js  battlepass.js  home.js  koverna.js  multiplayer.js  profile.js  settings.js
