[project]
name = "kovcheg"
version = "0.1.0"
description = "Ковчег — Telegram Mini-App (FastAPI + aiogram + SQLite)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "aiogram>=3.4",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "PyPDF2>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]  # B008: FastAPI pattern requires Depends() in defaults
